@@ -289,7 +289,7 @@ void create_blacklist_dialog (ProcData *procdata)
   		hbox = gtk_hbox_new (FALSE, 0);
   		gtk_box_pack_end (GTK_BOX (inner_vbox), hbox, FALSE, FALSE, 0);
   	
-  		button = gtk_button_new_with_label (_("Remove From List"));
+  		button = gtk_button_new_with_mnemonic (_("_Remove From List"));
   		/*gtk_misc_set_padding (GTK_MISC (GTK_BUTTON (button)->child), 
   				      GNOME_PAD_SMALL, -2);*/
   		gtk_box_pack_end (GTK_BOX (hbox), button, FALSE, FALSE, 0);
