@@ -1,3 +1,11 @@
+2001-11-07  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c, interface.c, favorites.c: more mnemonics. Again
+	gtk 2.0 rocks.
+
+	* also mark strings for translation that got lost in the
+	porting
+
 2001-11-06  Kevin Vandersloot <kfv101@psu.edu>
 
 	* interface.c, procman.c: save the disk list state
